# openbrep

./: .gitignore  INSTALL_CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: build-installers.yml  tests.yml
docs/: AI_DEVELOPMENT_GUIDE.zh-CN.md  ARCHITECTURE_TOP_LEVEL_PATH.zh-CN.md  GDL_COMMERCIAL_SKILL_PLAN.zh-CN.md  GDL_KNOWLEDGE_VERIFICATION_PLAN.zh-CN.md  RELEASE_PROCESS.md
docs/releases/: v0.6.12.md
knowledge/archetypes/: bookshelf.md  cabinet.md  door.md  profile_object.md  table.md  window.md
knowledge/wiki/: ADD_DEL.md  BLOCK.md  BODY_EDGE_PGON.md  CUTPLANE.md  CYLIND.md  DEFINE.md  FOR_NEXT.md  GLOBALS.md  HOTSPOT2.md  IF_ENDIF.md  MATERIAL.md  Object_Types.md  PRISM_.md  PROJECT2.md  Paramlist_XML.md  REVOLVE.md  SWEEP.md  Transformation_Stack.md  acs.md  add.md  add2.md  addgroup.md  additional.md  addx.md  addy.md  addz.md  ancestry_info.md  angular_dimension.md  angular_length_dimension.md  application.md  application_query.md  arc.md  arc2.md  area_dimension.md  armc.md  arme.md  asn.md  assocel_properties.md  assoclp_name.md  assoclp_parvalue.md  (+507 more)
openbrep/: __init__.py  gdl_previewer.py  knowledge.py  knowledge_selector.py  learning.py
openbrep/runtime/: pipeline.py  (+1 more)
scripts/: knowledge_context_smoke.py
tests/: test_chat_flow.py  test_chat_runtime.py  test_gdl_previewer.py  test_knowledge_context_smoke.py  test_knowledge_lint.py  test_knowledge_selector.py  test_learning.py  test_pipeline_chat.py  test_pipeline_modify.py  test_script_application.py  test_vision.py
ui/: actions.py  app.py  chat_controller.py  chat_helpers.py  chat_history_actions.py  chat_paths.py  chat_runtime.py  chat_tapir_events.py  gdl_checks.py  generation_controls.py  generation_service.py  knowledge_access.py  local_file_dialog.py  preview_controller.py  project_activity.py  project_io.py  project_service.py  project_snapshot.py  revision_controller.py  runtime_service.py  script_application.py  session_defaults.py  tapir_controller.py  tapir_views.py  view_models.py  vision_controller.py
user_knowledge/: column_spec.md  unit_conventions.md
(+9 files in other folders)
