[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbrep"
version = "0.6.12"
description = "AI Agent for automated ArchiCAD GDL library object development (HSF-native)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["archicad", "gdl", "bim", "ai-agent", "llm", "automation", "hsf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "litellm>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "cryptography>=41.0",
    "plotly>=5.20.0",
    "pytest>=8.0",
    "streamlit>=1.30.0",
    "streamlit-ace>=0.1.1",
    "ruff>=0.4.0",
]
ui = [
    "cryptography>=41.0",
    "streamlit>=1.30.0",
    "streamlit-ace>=0.1.1",
    "plotly>=5.20.0",
]
local = [
    "ollama>=0.2.0",
]
pro = [
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/byewind1/openbrep"
Repository = "https://github.com/byewind1/openbrep"
Issues = "https://github.com/byewind1/openbrep/issues"

[project.scripts]
obr = "openbrep.cli:main_app_entry"
openbrep = "openbrep.cli:main_app_entry"
obrcli = "openbrep.cli:main_obrcli_entry"

[tool.hatch.build.targets.wheel]
packages = ["openbrep", "cli"]

[tool.hatch.build.targets.wheel.force-include]
"ui" = "ui"
"knowledge" = "knowledge"
"skills" = "skills"

[tool.hatch.build.targets.sdist]
include = [
    "/cli",
    "/openbrep",
    "/ui",
    "/knowledge",
    "/skills",
    "/tests",
    "/README.md",
    "/README.zh-CN.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
